@@ -41,7 +41,7 @@
 		
 		/// cachers
 		//@{
-		public function cacheByQuery(
+		protected function cacheByQuery(
 			SelectQuery $query, /* Identifiable */ $object
 		)
 		{
@@ -65,7 +65,7 @@
 			return $object;
 		}
 		
-		public function cacheListByQuery(SelectQuery $query, /* array */ $array)
+		protected function cacheListByQuery(SelectQuery $query, /* array */ $array)
 		{
 			if ($array !== Cache::NOT_FOUND) {
 				Assert::isArray($array);
