@@ -59,7 +59,7 @@
 		
 		/// cachers
 		//@{
-		public function cacheByQuery(
+		protected function cacheByQuery(
 			SelectQuery $query, /* Identifiable */ $object
 		)
 		{
@@ -74,7 +74,10 @@
 			return $object;
 		}
 		
-		public function cacheListByQuery(SelectQuery $query, /* array */ $array)
+		protected function cacheListByQuery(
+			SelectQuery $query,
+			/* array */ $array
+		)
 		{
 			if ($array !== Cache::NOT_FOUND) {
 				Assert::isArray($array);
